# wpical

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  linuxgithubbuilderror.txt  setup.sh  vcpkg.json  windowsiss.iss
.github/workflows/: cmake_build.yml
assets/: camera calibration.json  output.fmap  output.json
src/cpp/: WPIcal.cpp  cameracalibration.cpp  fieldcalibration.cpp  gtsam_utils.cpp  main.cpp  tagmodel.cpp
src/include/: cameracalibration.h  fieldcalibration.h  gtsam_utils.h  tagmodel.h
src/main/cpp/: WPIcal.cpp  cameracalibration.cpp  fieldcalibration.cpp
src/main/include/: cameracalibration.h  fieldcalibration.h
src/main/mac/: ov.icns
src/scripts/: requirements.txt  visualize.py
src/test/: test.cpp
wpigui/: CMakeLists.txt
